# wire-server

./: .gitignore
libs/brig-types/src/Brig/Types/: Activation.hs  AddressBook.hs  Common.hs  Connection.hs  Provider.hs  User.hs
libs/types-common/: types-common.cabal
libs/types-common/src/Data/: Misc.hs
libs/types-common/src/Util/: Options.hs  Test.hs
libs/types-common/src/Util/Options/: Common.hs
services/: .integration.yaml.template
services/brig/src/: Main.hs
services/brig/src/Brig/: API.hs  App.hs  Options.hs  ZAuth.hs
services/brig/src/Brig/API/: Connection.hs
services/brig/src/Brig/Data/: User.hs
services/brig/src/Brig/Provider/: Template.hs
services/brig/test/integration/: API.hs  Main.hs
services/cargohold/: Makefile  cargohold.cabal
services/cargohold/conf/: cargohold.yaml
services/cargohold/src/CargoHold/: API.hs  App.hs  Options.hs
services/cargohold/test/integration/: Main.hs
services/galley/: galley.cabal
services/galley/journaler/src/: Journal.hs
services/galley/src/Galley/: Aws.hs
services/galley/test/integration/: Main.hs
services/gundeck/: Makefile  gundeck.cabal
services/gundeck/conf/: gundeck.yaml
services/gundeck/src/Gundeck/: API.hs  Aws.hs  Env.hs  Options.hs  Push.hs  React.hs
services/gundeck/test/integration/: Main.hs
services/proxy/: proxy.cabal  proxy.dhall  stack.yaml
services/proxy/src/: Main.hs
services/proxy/src/Proxy/: API.hs  Env.hs  Options.hs
tools/migrator/: Makefile  migrator.cabal  stack.yaml
tools/migrator/src/: Main.hs  Migration.hs  Options.hs
(+14 files in other folders)
